@@ -2041,18 +2041,21 @@ https://www.facebook.com/TheOpenCloset/
 
 @@ order-reserved-1.txt
 % my ($order, $name, $datetime, $edit_url) = @_;
-[열린옷장] <%= $name %>님 <%= $datetime %>으로 방문 예약이 완료되었습니다.
+<%= $name %>님 <%= $datetime %>으로 방문 예약이 완료되었습니다.
+
 <열린옷장 위치안내>
-서울특별시 광진구 아차산로 213 국민은행, 건대입구역 1번 출구로 나오신 뒤 오른쪽으로 꺾어 150M 가량 직진하시면 1층에 국민은행이 있는 건물 5층으로 올라오시면 됩니다. (도보로 약 3분 소요)
-지도 안내: https://goo.gl/UuJyrx
+서울특별시 광진구 아차산로 213 웅진빌딩 5층.
+건대입구역 1번 출구로 나와 오른쪽 다이소 방향으로 직진하여 국민은행 있는 건물 5층으로 와주세요(도보로 약 3분 소요)
+지도 안내) https://goo.gl/UuJyrx
 
-예약시간 변경/취소는 <%= $edit_url %> 에서 가능합니다.
+<예약시간 변경/취소 링크>
+<%= $edit_url %>
 
-1. 지각은 NO!
-꼭 예약 시간에 방문해주세요. 예약한 시간에 방문하지 못한 경우, 정시에 방문한 대여자를 먼저 안내하기 때문에 늦거나 일찍 온 시간만큼 대기시간이 길어집니다.
+<이용약속>
+1. 코로나 19로부터 안전을 위해 방문 시 마스크착용 및 체온확인, 손소독제 사용을 부탁드립니다.
+2. 지각은 NO! 노쇼 금지! 예약시간을 지켜주세요.
 
-2. 노쇼(no show)금지
-열린옷장은 하루에 방문 가능한 예약 인원이 정해져 있습니다. 방문이 어려운 경우 다른 분을 위해 반드시 '예약취소' 해주세요. 예약취소는 세 시간 전까지 가능합니다.
+열린옷장은 <%= $name %>님의 멋진 모습을 위해 최선을 다할게요!
 
 @@ employment-wing.txt
 % my ($year) = @_;
